[SPv175] Fix clip of unclipped squashing layers when RLS is off.

Previously, we were using ClipPaintPropertyNode::Root, which is incorrect because
everything is clipped by the frame. (In RLS mode, the frame's LayoutView always has
overflow clipping, so there is always a cliipping container.)

Bug: 825280

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Iee2c55bc32caeb1f8f0f057c6325a995af3b32ec
Reviewed-on: https://chromium-review.googlesource.com/985906
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547102}
Former-commit-id: bc611587d59c74fc0ac0749bff47b4dc96a171c5